# deployment-cli

./: .gitignore  CODEOWNERS  Cargo.toml  Dockerfile  LICENSE  README.md  linux_xcompile.dockerfile  macos_xcompile.dockerfile
.circleci/: cargo_config  config.yml
.github/workflows/: shellcheck.yaml
action/: Dockerfile  README.md  action.yml  entrypoint.sh
buildscripts/: cargo_config  setup_osxcross.sh
src/: cli_tests.rs  client.rs  deployment_client.rs  github_client.rs  main.rs  main_tests.rs  models.rs  test_helpers.rs
src/cli/: mod.rs
src/cli/deploy/: mod.rs  tests.rs
src/cli/deploy/create/: mod.rs  tests.rs
src/cli/exchange_token/: mod.rs  tests.rs
src/cli/token/: mod.rs  tests.rs
testdata/: deployment_create_response.json  expected_payload.json  expected_payload_raw.json  expected_payload_var_override.json  expected_payload_with_vars.json  installation_access_token.json  installations.json  nais.yaml  nais_valid_raw.yaml  nais_with_var_override.yaml  resource_with_directive.yaml  statuses.json  statuses_no_final.json  testkey_windows_newlines  testkey_windows_newlines.b64  testkey_windows_newlines.pub  testkey_windows_newlines.pub.der  vars.json
