[package]
name = "deployment-cli"
version = "0.1.8"
authors = ["Kevin Sillerud <kevin.sillerud@gmail.com>"]
edition = "2018"

[dependencies]
serde="1.0"
serde_json="1.0"
serde_derive="1.0"
serde_yaml="0.8"
handlebars="2.0.0-beta.1"
clap="2"
jsonwebtoken="6.0.1"
rpassword="3.0.1"
base64="0.10"
mockito="0.17"
failure="0.1"

[dependencies.reqwest]
version="0.9"
features=["rustls-tls"]
default-features=false

