[package]
name = "deployment-cli"
version = "0.3.0"
authors = ["Kevin Sillerud <kevin.sillerud@gmail.com>"]
edition = "2018"

[dependencies]
serde="1.0"
serde_json="1.0"
serde_derive="1.0"
serde_yaml="0.8"
handlebars="2.0"
clap="2"
jsonwebtoken="6.0"
rpassword="4.0"
base64="0.10"
mockito="0.21"
failure="0.1"

[dependencies.reqwest]
version="0.10"
features=["rustls-tls"]
default-features=false

